--- a/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
@@ -1165,19 +1165,6 @@ spec:
                                 description: ValidationRule describes a validation
                                   rule written in the CEL expression language.
                                 properties:
-                                  FieldValueRequired:
-                                    default: FieldValueInvalid
-                                    description: |-
-                                      Reason provides a machine-readable validation failure reason that is returned to the caller when a request fails this validation rule.
-                                      The currently supported reasons are: "FieldValueInvalid", "FieldValueForbidden", "FieldValueRequired", "FieldValueDuplicate".
-                                      If not set, default to use "FieldValueInvalid".
-                                      All future added reasons must be accepted by clients when reading this value and unknown reasons should be treated as FieldValueInvalid.
-                                    enum:
-                                    - FieldValueInvalid
-                                    - FieldValueForbidden
-                                    - FieldValueRequired
-                                    - FieldValueDuplicate
-                                    type: string
                                   fieldPath:
                                     description: |-
                                       FieldPath represents the field path returned when the validation fails.
@@ -1209,6 +1196,19 @@ spec:
                                       messageExpression has access to all the same variables as the rule; the only difference is the return type.
                                       Example:
                                       "x must be less than max ("+string(self.max)+")"
+                                    type: string
+                                  reason:
+                                    default: FieldValueInvalid
+                                    description: |-
+                                      Reason provides a machine-readable validation failure reason that is returned to the caller when a request fails this validation rule.
+                                      The currently supported reasons are: "FieldValueInvalid", "FieldValueForbidden", "FieldValueRequired", "FieldValueDuplicate".
+                                      If not set, default to use "FieldValueInvalid".
+                                      All future added reasons must be accepted by clients when reading this value and unknown reasons should be treated as FieldValueInvalid.
+                                    enum:
+                                    - FieldValueInvalid
+                                    - FieldValueForbidden
+                                    - FieldValueRequired
+                                    - FieldValueDuplicate
                                     type: string
                                   rule:
                                     description: "Rule represents the expression which
@@ -2185,19 +2185,6 @@ spec:
                                       description: ValidationRule describes a validation
                                         rule written in the CEL expression language.
                                       properties:
-                                        FieldValueRequired:
-                                          default: FieldValueInvalid
-                                          description: |-
-                                            Reason provides a machine-readable validation failure reason that is returned to the caller when a request fails this validation rule.
-                                            The currently supported reasons are: "FieldValueInvalid", "FieldValueForbidden", "FieldValueRequired", "FieldValueDuplicate".
-                                            If not set, default to use "FieldValueInvalid".
-                                            All future added reasons must be accepted by clients when reading this value and unknown reasons should be treated as FieldValueInvalid.
-                                          enum:
-                                          - FieldValueInvalid
-                                          - FieldValueForbidden
-                                          - FieldValueRequired
-                                          - FieldValueDuplicate
-                                          type: string
                                         fieldPath:
                                           description: |-
                                             FieldPath represents the field path returned when the validation fails.
@@ -2229,6 +2216,19 @@ spec:
                                             messageExpression has access to all the same variables as the rule; the only difference is the return type.
                                             Example:
                                             "x must be less than max ("+string(self.max)+")"
+                                          type: string
+                                        reason:
+                                          default: FieldValueInvalid
+                                          description: |-
+                                            Reason provides a machine-readable validation failure reason that is returned to the caller when a request fails this validation rule.
+                                            The currently supported reasons are: "FieldValueInvalid", "FieldValueForbidden", "FieldValueRequired", "FieldValueDuplicate".
+                                            If not set, default to use "FieldValueInvalid".
+                                            All future added reasons must be accepted by clients when reading this value and unknown reasons should be treated as FieldValueInvalid.
+                                          enum:
+                                          - FieldValueInvalid
+                                          - FieldValueForbidden
+                                          - FieldValueRequired
+                                          - FieldValueDuplicate
                                           type: string
                                         rule:
                                           description: "Rule represents the expression
