:bug: Add for new linters to fix old syntax (#10699)
* add new linters

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* apply for copyloopvar

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* apply for intrange

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* upgrade golangci-lint

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* fix: intrange

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* apply for gosec

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* re-apply for copyloopvar

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* re-apply for intrange

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* delete exportloopref

Signed-off-by: sivchari <shibuuuu5@gmail.com>

* re-fix lint errors

Signed-off-by: sivchari <shibuuuu5@gmail.com>

---------

Signed-off-by: sivchari <shibuuuu5@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -19,12 +19,12 @@ linters:
   - bidichk
   - bodyclose
   - containedctx
+  - copyloopvar
   - dogsled
   - dupword
   - durationcheck
   - errcheck
   - errchkjson
-  - exportloopref
   - gci
   - ginkgolinter
   - goconst
@@ -38,6 +38,7 @@ linters:
   - govet
   - importas
   - ineffassign
+  - intrange
   - loggercheck
   - misspell
   - nakedret
