Add map key for MD/MD class & topology in ClusterClass & Cluster.spec.topology
Signed-off-by: Stefan Büringer buringerst@vmware.com

--- a/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_clusterclasses.yaml
@@ -1733,6 +1733,9 @@ spec:
                       - template
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - class
+                    x-kubernetes-list-type: map
                   machinePools:
                     description: |-
                       MachinePools is a list of machine pool classes that can be used to create
@@ -1947,6 +1950,9 @@ spec:
                       - template
                       type: object
                     type: array
+                    x-kubernetes-list-map-keys:
+                    - class
+                    x-kubernetes-list-type: map
                 type: object
             type: object
           status:
