--- a/config/crd/bases/cluster.x-k8s.io_machinehealthchecks.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinehealthchecks.yaml
@@ -643,6 +643,9 @@ spec:
                 description: |-
                   Any further remediation is only allowed if at most "MaxUnhealthy" machines selected by
                   "selector" are not healthy.
+
+
+                  Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/issues/10722 for more details.
                 x-kubernetes-int-or-string: true
               nodeStartupTimeout:
                 description: |-
@@ -791,6 +794,9 @@ spec:
                   Eg. "[3-5]" - This means that remediation will be allowed only when:
                   (a) there are at least 3 unhealthy machines (and)
                   (b) there are at most 5 unhealthy machines
+
+
+                  Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/issues/10722 for more details.
                 pattern: ^\[[0-9]+-[0-9]+\]$
                 type: string
             required:
