--- a/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
+++ b/config/crd/bases/cluster.x-k8s.io_machinedeployments.yaml
@@ -1179,6 +1179,9 @@ spec:
                   The number of old MachineSets to retain to allow rollback.
                   This is a pointer to distinguish between explicit zero and not specified.
                   Defaults to 1.
+
+
+                  Deprecated: This field is deprecated and is going to be removed in the next apiVersion. Please see https://github.com/kubernetes-sigs/cluster-api/issues/10479 for more details.
                 format: int32
                 type: integer
               rolloutAfter:
