--- a/internal/test/builder/crd/test.cluster.x-k8s.io_phase2obj.yaml
+++ b/internal/test/builder/crd/test.cluster.x-k8s.io_phase2obj.yaml
@@ -164,6 +164,9 @@ spec:
                           - type
                           type: object
                         type: array
+                        x-kubernetes-list-map-keys:
+                        - type
+                        x-kubernetes-list-type: map
                     type: object
                 type: object
             type: object
