--- a/internal/test/builder/crd/test.cluster.x-k8s.io_phase0obj.yaml
+++ b/internal/test/builder/crd/test.cluster.x-k8s.io_phase0obj.yaml
@@ -95,6 +95,9 @@ spec:
                   - type
                   type: object
                 type: array
+                x-kubernetes-list-map-keys:
+                - type
+                x-kubernetes-list-type: map
             type: object
         type: object
     served: true
