--- a/test/e2e/config/docker.yaml
+++ b/test/e2e/config/docker.yaml
@@ -353,12 +353,12 @@ variables:
   # allowing the same e2e config file to be re-used in different Prow jobs e.g. each one with a K8s version permutation.
   # The following Kubernetes versions should be the latest versions with already published kindest/node images.
   # This avoids building node images in the default case which improves the test duration significantly.
-  KUBERNETES_VERSION_MANAGEMENT: "v1.30.0"
-  KUBERNETES_VERSION: "v1.30.0"
-  KUBERNETES_VERSION_UPGRADE_FROM: "v1.29.4"
-  KUBERNETES_VERSION_UPGRADE_TO: "v1.30.0"
+  KUBERNETES_VERSION_MANAGEMENT: "v1.31.0-beta.0"
+  KUBERNETES_VERSION: "v1.31.0-beta.0"
+  KUBERNETES_VERSION_UPGRADE_FROM: "v1.30.2"
+  KUBERNETES_VERSION_UPGRADE_TO: "v1.31.0-beta.0"
   KUBERNETES_VERSION_LATEST_CI: "ci/latest-1.31"
-  ETCD_VERSION_UPGRADE_TO: "3.5.12-0"
+  ETCD_VERSION_UPGRADE_TO: "3.5.14-0"
   COREDNS_VERSION_UPGRADE_TO: "v1.11.1"
   DOCKER_SERVICE_DOMAIN: "cluster.local"
   IP_FAMILY: "dual"
