--- a/test/e2e/data/infrastructure-docker/main/cluster-template-upgrades-runtimesdk/cluster-runtimesdk.yaml
+++ b/test/e2e/data/infrastructure-docker/main/cluster-template-upgrades-runtimesdk/cluster-runtimesdk.yaml
@@ -24,6 +24,8 @@ spec:
         - class: "default-worker"
           name: "md-0"
           nodeDeletionTimeout: "30s"
+          nodeVolumeDetachTimeout: "5m"
+          minReadySeconds: 5
           replicas: ${WORKER_MACHINE_COUNT}
           failureDomain: fd4
       machinePools:
